--- a/layout4.html
+++ b/layout4.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout selfver</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/layout4.css">
+    <link rel="stylesheet" href="./css/all.min.css">
 </head>
-
 <body>
     <!-- 헤더탑 -->
-    <div class="headertop">
-        <div class="htgrid">
-            <i></i>
+    <div class="hdrTop">
+        <div class="hdrTopGrid">
+            <i class="fa-brands fa-youtube"></i>
         </div>
     </div>
+
     <!-- 헤더 -->
-    <div class="header">
-        <div class="headgrid">
+    <div class="headerWrap">
+        <div class="header">
             <h1>logo here</h1>
             <ul>
                 <li>about</li>
@@ -25,29 +26,27 @@
             </ul>
         </div>
     </div>
+
+
     <!-- 컨텐츠1 -->
     <div class="content cnt1">
-        <div class="contentgrid1">
+        <div class="contentGrid">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque ullam minus dicta doloremque eveniet
-                    tempore nam minima? Nam nobis vero consequuntur eum! Perferendis et dolor enim id eum consequuntur
-                    quibusdam!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non blanditiis voluptates ex. Omnis laborum
+                    reiciendis repudiandae necessitatibus, veniam, nesciunt, eaque eius repellendus pariatur alias
+                    exercitationem molestiae iste. Quod, ipsam et?</p>
             </div>
             <div class="section">
-                <div class="arttop">
+                <div class="artTop">
                     <div class="article">
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
                             <h4>Lorem ipsum dolor sit amet.</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
-                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
-                                odit? Culpa odio ad est.
-                            </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, vero perspiciatis. Quos facere corrupti eos eius ducimus, distinctio illum debitis porro minus ipsa magnam, eveniet veniam, esse blanditiis saepe assumenda.</p>
                             <div class="icons">
-                                <i></i>
-                                <i></i>
+                                <i></i><i></i>
                             </div>
                         </div>
                     </div>
@@ -56,27 +55,21 @@
                         <div class="texts">
                             <h3>segment title</h3>
                             <h4>Lorem ipsum dolor sit amet.</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
-                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
-                                odit? Culpa odio ad est.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, vero perspiciatis. Quos facere corrupti eos eius ducimus, distinctio illum debitis porro minus ipsa magnam, eveniet veniam, esse blanditiis saepe assumenda.</p>
                             <div class="icons">
-                                <i></i>
-                                <i></i>
+                                <i></i><i></i>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="artbottom">
+                <div class="artBottom">
                     <div class="article">
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
-                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
-                                odit? Culpa odio ad est.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, vero perspiciatis. Quos facere corrupti eos eius ducimus, distinctio illum debitis porro minus ipsa magnam, eveniet veniam, esse blanditiis saepe assumenda.</p>
                             <div class="icons">
-                                <i></i>
-                                <i></i>
+                                <i></i><i></i>
                             </div>
                         </div>
                     </div>
@@ -84,12 +77,9 @@
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
-                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
-                                odit? Culpa odio ad est.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, vero perspiciatis. Quos facere corrupti eos eius ducimus, distinctio illum debitis porro minus ipsa magnam, eveniet veniam, esse blanditiis saepe assumenda.</p>
                             <div class="icons">
-                                <i></i>
-                                <i></i>
+                                <i></i><i></i>
                             </div>
                         </div>
                     </div>
@@ -97,12 +87,9 @@
                         <img src="" alt="">
                         <div class="texts">
                             <h3>segment title</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, sunt nihil sapiente
-                                dolorem deserunt sit modi omnis fugit id amet eos illo exercitationem sequi laudantium
-                                odit? Culpa odio ad est.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, vero perspiciatis. Quos facere corrupti eos eius ducimus, distinctio illum debitis porro minus ipsa magnam, eveniet veniam, esse blanditiis saepe assumenda.</p>
                             <div class="icons">
-                                <i></i>
-                                <i></i>
+                                <i></i><i></i>
                             </div>
                         </div>
                     </div>
@@ -110,98 +97,104 @@
             </div>
         </div>
     </div>
+
     <!-- 컨텐츠2 -->
     <div class="content cnt2">
-        <div class="contentgrid2">
+        <div class="contentGrid">
             <div class="header">
                 <h2>content title</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore
-                    aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus
-                    recusandae excepturi sequi iusto, molestiae autem nemo.
-                </p>
+                <p>Lorem <span>ipsum</span> dolor sit amet consectetur H<sub>2</sub>O X<sup>2</sup> Non blanditiis
+                    voluptates ex. Omnis laborum
+                    <small>reiciendis repudiandae</small> necessitatibus, veniam, nesciunt, eaque eius repellendus
+                    pariatur alias
+                    exercitationem molestiae iste. Quod, ipsam et?</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <img src="" alt="">
+                    <video src="./244754_small.mp4" autoplay muted loop>비디오에 대한 설명</video>
                     <div class="texts">
                         <h3>Segment title</h3>
                         <h4>Lorem ipsum dolor sit amet.</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita quas fugiat tempore
-                            aperiam aspernatur inventore eveniet sit saepe minima tempora laborum dignissimos temporibus
-                            recusandae excepturi sequi iusto, molestiae autem nemo.</p>
-                        <div class="button"></div>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas facilis architecto quidem
+                            ipsam nostrum quae esse tempora, fugiat, error, repellendus explicabo. Ipsum dicta
+                            repudiandae, quas eaque assumenda tenetur expedita eum.</p>
+                        <div class="button">button</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- 컨텐츠3 -->
     <div class="content cnt3">
-        <div class="contentgrid3">
+        <div class="contentGrid">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque ullam minus dicta doloremque eveniet
-                    tempore nam minima? Nam nobis vero consequuntur eum! Perferendis et dolor enim id eum consequuntur
-                    quibusdam!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non blanditiis voluptates ex. Omnis laborum
+                    reiciendis repudiandae necessitatibus, veniam, nesciunt, eaque eius repellendus pariatur alias
+                    exercitationem molestiae iste. Quod, ipsam et?</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <img src="" alt="">
+                    <img src="./images/kUGqKDay3xxr0fnP08hvRGkkFheP4nvcZ8yRHdV64XHfUFUS7L_xMpdW4Ae0Tz1bjV6q3YQJW17mZPbzpPDMug.webp" alt="학생들에게 무언가 알려줌">
                     <div class="texts">
-                        <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
-                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
-                            dolores a earum rerum omnis vel quam.</p>
-                    </div>
-
-                </div>
-                <div class="article">
-                    <img src="" alt="">
-                    <div class="texts">
-                        <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
-                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
-                            dolores a earum rerum omnis vel quam.</p>
+                        <h3>segement title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore fugiat repellat
+                            reprehenderit autem quod ratione doloremque cum, perferendis iste rerum facere maiores
+                            incidunt quam ad! Totam voluptate enim excepturi sit.</p>
                     </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
                     <div class="texts">
-                        <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
-                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
-                            dolores a earum rerum omnis vel quam.</p>
+                        <h3>segement title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore fugiat repellat
+                            reprehenderit autem quod ratione doloremque cum, perferendis iste rerum facere maiores
+                            incidunt quam ad! Totam voluptate enim excepturi sit.</p>
                     </div>
                 </div>
                 <div class="article">
                     <img src="" alt="">
                     <div class="texts">
-                        <h3>Segment title</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quam nisi cum quisquam.
-                            Dolorem delectus, minima ipsam suscipit, exercitationem, accusamus necessitatibus et nisi
-                            dolores a earum rerum omnis vel quam.</p>
+                        <h3>segement title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore fugiat repellat
+                            reprehenderit autem quod ratione doloremque cum, perferendis iste rerum facere maiores
+                            incidunt quam ad! Totam voluptate enim excepturi sit.</p>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="" alt="">
+                    <div class="texts">
+                        <h3>segement title</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore fugiat repellat
+                            reprehenderit autem quod ratione doloremque cum, perferendis iste rerum facere maiores
+                            incidunt quam ad! Totam voluptate enim excepturi sit.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- 푸터 -->
     <div class="footer">
-        <div class="footergrid">
+        <div class="footerGrid">
             <h4>logo here</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam temporibus sed repudiandae, quaerat
-                commodi eum pariatur illo quos molestias sint corporis tempora molestiae assumenda animi nisi possimus
-                tempore sit beatae!</p>
+            <p>Lorem
+                ipsum dolor si
+                t, amet consectetur adipisicing elit. Ratione quod, v
+                eniam blanditiis iure recusandae sed laudantium at a repellat sit. Eligendi eum iste totam aliquam
+                architecto, asper
+                natur
+                dolore dolorem beatae!m</p>
             <div class="sns">
                 <i></i>
                 <i></i>
                 <i></i>
             </div>
-
         </div>
     </div>
-    </div>
+</body>
+
 </body>
 
 </html>
