--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCsectiondivTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,18 +13,24 @@
     <!-- 헤더탑 -->
     <div class="hdrTopWrap">
         <div class="hdrTop">
-            <i class="fa-solid fa-sleigh"></i>
+            <i class="fa-brands fa-whatsapp"></i>
         </div>
     </div>
 
     <!-- 헤더 -->
     <div class="headerWrap">
         <div class="header">
-            <h1>logo here</h1>
+            <h1><a href="http://www.naver.com" target="_blank">logo here</a></h1>
             <ul>
-                <li>about</li>
-                <li>news</li>
-                <li>portfolio</li>
+                <li>
+                    <a href="http://www.google.com">about</a>
+                </li>
+                <li>
+                    <a href="http://www.daum.net">news</a>
+                </li>
+                <li>
+                    <a href="http://www.naver.com">portfolio</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -34,78 +40,78 @@
         <div class="content cnt01">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore id animi accusamus at et. Maiores
-                    officia, quas impedit consectetur veritatis sunt modi, doloribus odio odit accusantium minima beatae
-                    atque iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum corrupti exercitationem
+                    dignissimos id temporibus. Fugit beatae quae tenetur quasi facere at molestias praesentium, unde
+                    voluptates, consequuntur dolores minus magni.</p>
             </div>
             <div class="section">
                 <div class="artTop">
                     <div class="article">
-                        <div class="image"></div>
+                        <div class="image i1"></div>
                         <div class="texts">
-                            <h3>content title</h3>
+                            <h3>segment title</h3>
                             <h4>Lorem ipsum dolor sit amet.</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur amet assumenda
-                                accusantium excepturi exercitationem ratione, aliquid mollitia cumque esse eum. Quo a
-                                velit accusamus, similique dolorum id iure voluptatum commodi?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt nemo delectus
+                                asperiores in architecto quaerat, dicta ullam distinctio voluptatem provident dolorem
+                                tempora nam, animi consectetur! Eos placeat voluptatibus omnis vitae.</p>
                             <div class="icons">
-                                <i class="fa-solid fa-thumbs-up"></i>
-                                <i class="fa-solid fa-share"></i>
+                                <i class="fa-brands fa-tiktok"></i>
+                                <i class="fa-brands fa-figma"></i>
                             </div>
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image"></div>
+                        <div class="image i2"></div>
                         <div class="texts">
-                            <h3>content title</h3>
-                            <h4>Suscipit, consequuntur consectetur? Enim, atque.</h4>
-                            <p>Nostrum, dolor fugiat? Neque quam fuga nobis libero accusantium esse suscipit laudantium
-                                molestias illum eum, veniam architecto inventore, officiis aperiam repellat voluptate
-                                voluptatibus omnis id. Deleniti dolorum quidem veniam corrupti!</p>
+                            <h3>segment title</h3>
+                            <h4>Lorem ipsum dolor sit amet.</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt nemo delectus
+                                asperiores in architecto quaerat, dicta ullam distinctio voluptatem provident dolorem
+                                tempora nam, animi consectetur! Eos placeat voluptatibus omnis vitae.</p>
                             <div class="icons">
-                                <i class="fa-solid fa-thumbs-up"></i>
-                                <i class="fa-solid fa-share"></i>
+                                <i class="fa-brands fa-tiktok"></i>
+                                <i class="fa-brands fa-figma"></i>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="artBtm">
                     <div class="article">
-                        <div class="image"></div>
+                        <div class="image i3"></div>
                         <div class="texts">
-                            <h3>content title</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae tempore obcaecati
-                                alias placeat ipsum quasi ipsam ea doloribus ex earum expedita sint similique
-                                reiciendis, asperiores corporis reprehenderit numquam esse blanditiis.</p>
+                            <h3>segment title</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eaque officia nam minus,
+                                optio itaque iusto sit a alias. Nulla ipsa voluptatem, neque necessitatibus molestias
+                                illum officia voluptate molestiae magnam.</p>
                             <div class="icons">
-                                <i class="fa-solid fa-thumbs-up"></i>
-                                <i class="fa-solid fa-share"></i>
+                                <i class="fa-brands fa-tiktok"></i>
+                                <i class="fa-brands fa-figma"></i>
                             </div>
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image"></div>
+                        <div class="image i4"></div>
                         <div class="texts">
-                            <h3>content title</h3>
-                            <p>Iste, dolore obcaecati? Quod quibusdam id tenetur repudiandae, adipisci, suscipit
-                                accusamus nihil ipsa ad ullam obcaecati? Ratione sequi modi, excepturi maxime
-                                perspiciatis odit totam dolorem, culpa velit ipsam nobis quasi!</p>
+                            <h3>segment title</h3>
+                            <p>Ipsum tempore consequuntur amet! Nisi atque, neque quod voluptatem dolore consectetur
+                                ipsam! Doloremque voluptates hic excepturi id natus, suscipit ipsam consectetur libero
+                                ut odio facere ratione quisquam cupiditate fugit aliquam!</p>
                             <div class="icons">
-                                <i class="fa-solid fa-thumbs-up"></i>
-                                <i class="fa-solid fa-share"></i>
+                                <i class="fa-brands fa-tiktok"></i>
+                                <i class="fa-brands fa-figma"></i>
                             </div>
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image"></div>
+                        <div class="image i5"></div>
                         <div class="texts">
-                            <h3>content title</h3>
-                            <p>Magnam, dicta eos minima harum earum, labore saepe asperiores reiciendis et illo
-                                voluptatem consequuntur eligendi. Quidem ipsum tempore expedita incidunt vero magnam
-                                delectus cumque sint ut? Illo id excepturi dignissimos.</p>
+                            <h3>segment title</h3>
+                            <p>Temporibus distinctio, vitae labore voluptate doloremque ex natus deleniti saepe ab
+                                possimus expedita sapiente, tempora magni a commodi? Vitae quisquam ducimus ab soluta
+                                beatae id odit dolore quam? Nemo, facilis!</p>
                             <div class="icons">
-                                <i class="fa-solid fa-thumbs-up"></i>
-                                <i class="fa-solid fa-share"></i>
+                                <i class="fa-brands fa-tiktok"></i>
+                                <i class="fa-brands fa-figma"></i>
                             </div>
                         </div>
                     </div>
@@ -113,76 +119,80 @@
             </div>
         </div>
     </div>
-
-    <!-- 컨텐츠2 -->
     <div class="cntWrap">
         <div class="content cnt02">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore id animi accusamus at et. Maiores
-                    officia, quas impedit consectetur veritatis sunt modi, doloribus odio odit accusantium minima beatae
-                    atque iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum corrupti exercitationem
+                    dignissimos id temporibus. Fugit beatae quae tenetur quasi facere at molestias praesentium, unde
+                    voluptates, consequuntur dolores minus magni.</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <div class="image"></div>
+                    <div class="image">
+                        <video src="./244754_small.mp4" autoplay muted loop>고</video>
+                    </div>
                     <div class="texts">
-                        <h3>content title</h3>
+                        <h3>segment title</h3>
                         <h4>Lorem ipsum dolor sit amet.</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore qui repellendus totam eos in
-                            laborum, dolorem molestias voluptatem natus, cumque omnis necessitatibus quibusdam unde quod
-                            nisi ratione! Neque, odio quas?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta accusantium? Iste est
+                            fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
+                            Aspernatur, facere beatae Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+                            dicta accusantium? Iste est
+                            fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
+                            Aspernatur, facere beatae Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+                            dicta accusantium? Iste est
+                            fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
+                            Aspernatur, facere beatae.</p>
                         <div class="button">button</div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- 컨텐츠3 -->
     <div class="cntWrap">
         <div class="content cnt03">
             <div class="header">
                 <h2>content title</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore id animi accusamus at et. Maiores
-                    officia, quas impedit consectetur veritatis sunt modi, doloribus odio odit accusantium minima beatae
-                    atque iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel harum corrupti exercitationem
+                    dignissimos id temporibus. Fugit beatae quae tenetur quasi facere at molestias praesentium, unde
+                    voluptates, consequuntur dolores minus magni.</p>
             </div>
             <div class="section">
                 <div class="article">
-                    <div class="img"></div>
+                    <div class="image i6"></div>
                     <div class="texts">
-                        <h3>segment title</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius odit amet id nam quisquam
-                            temporibus dicta, laudantium expedita quam quos repellendus laboriosam saepe molestias,
-                            perspiciatis tempora eveniet, sed harum enim?</p>
+                        <h3>semgent title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ipsa. Laudantium eaque cumque
+                            consectetur perspiciatis voluptatum quidem suscipit cum amet ea ex mollitia fugiat illum
+                            quaerat quos sunt, consequatur ut!</p>
                     </div>
                 </div>
                 <div class="article">
-                    <div class="img"></div>
+                    <div class="image i7"></div>
                     <div class="texts">
-                        <h3>segment title</h3>
-                        <p>Suscipit aperiam nulla nostrum aliquam necessitatibus perspiciatis voluptates explicabo.
-                            Voluptatum tempora aspernatur quaerat harum officiis, ea perferendis ratione neque ipsa
-                            numquam quas delectus deserunt at inventore molestiae, debitis nobis mollitia!</p>
+                        <h3>semgent title</h3>
+                        <p>Corrupti numquam saepe aut quo iusto esse in iste vero excepturi eaque necessitatibus
+                            distinctio ipsum, beatae cum nulla! Saepe impedit adipisci delectus deserunt omnis tempore
+                            sequi dolorem quibusdam dolore iusto?</p>
                     </div>
                 </div>
                 <div class="article">
-                    <div class="img"></div>
+                    <div class="image i8"></div>
                     <div class="texts">
-                        <h3>segment title</h3>
-                        <p>Minima nemo, eaque consequatur impedit itaque est expedita blanditiis autem quia ab dicta a
-                            veniam incidunt molestias beatae quam esse culpa accusantium. Odio omnis iste sit tempora
-                            incidunt ducimus libero!</p>
+                        <h3>semgent title</h3>
+                        <p>Consequatur ipsam eaque repellat enim repudiandae harum, neque commodi odit quasi
+                            consequuntur delectus! Harum, unde rem alias recusandae necessitatibus obcaecati facilis ea
+                            eligendi dolorem natus, optio qui. Debitis, neque saepe.</p>
                     </div>
                 </div>
                 <div class="article">
-                    <div class="img"></div>
+                    <div class="image i9"></div>
                     <div class="texts">
-                        <h3>segment title</h3>
-                        <p>Libero tempore magni itaque nobis, incidunt dignissimos sequi quisquam aperiam asperiores
-                            inventore. Quos minus fugit deleniti necessitatibus cumque dolore in at, sunt, officia animi
-                            quasi inventore nihil ipsam molestiae vel.</p>
+                        <h3>semgent title</h3>
+                        <p>Asperiores aliquid provident mollitia architecto, aperiam placeat quisquam doloremque
+                            deleniti minus quibusdam pariatur porro, temporibus iusto iure qui alias aspernatur illo
+                            atque. Corporis recusandae quas, ducimus quos sunt aspernatur aliquid.</p>
                     </div>
                 </div>
             </div>
@@ -193,19 +203,16 @@
     <div class="ftrWrap">
         <div class="footer">
             <h4>logo here</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur praesentium quia, assumenda placeat
-                beatae fuga provident nesciunt earum tempora molestias voluptate eaque nobis tempore eos magnam ducimus
-                vitae amet officiis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae modi molestiae ratione inventore
+                voluptate alias, sint, dolore, magni dolor quam nemo ex non tempora! Voluptate earum fugit eum
+                asperiores?</p>
             <div class="sns">
-                <i class="fa-solid fa-heart"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-cloud"></i>
+                <i class="fa-brands fa-paypal"></i>
+                <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-spotify"></i>
             </div>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
