index 뒤처리까지

--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@
     <!-- 헤더 -->
     <div class="headerWrap">
         <div class="header">
-            <h1><a href="http://www.naver.com" target="_blank">logo here</a></h1>
+            <h1>
+                <a href="#">logo here</a>
+            </h1>
             <ul>
                 <li>
-                    <a href="http://www.google.com">about</a>
+                    <a href="http://www.naver.com" target="_blank">about</a>
                 </li>
                 <li>
                     <a href="http://www.daum.net">news</a>
                 </li>
                 <li>
-                    <a href="http://www.naver.com">portfolio</a>
+                    <a href="http://www.google.com">portfolio</a>
+                </li>
+                <li>
+                    <i class="fa-brands fa-whatsapp"></i>
                 </li>
             </ul>
         </div>
@@ -77,7 +82,7 @@
                 </div>
                 <div class="artBtm">
                     <div class="article">
-                        <div class="image i3"></div>
+                        <div class="image i1"></div>
                         <div class="texts">
                             <h3>segment title</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi eaque officia nam minus,
@@ -90,7 +95,7 @@
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image i4"></div>
+                        <div class="image i2"></div>
                         <div class="texts">
                             <h3>segment title</h3>
                             <p>Ipsum tempore consequuntur amet! Nisi atque, neque quod voluptatem dolore consectetur
@@ -103,7 +108,7 @@
                         </div>
                     </div>
                     <div class="article">
-                        <div class="image i5"></div>
+                        <div class="image i3"></div>
                         <div class="texts">
                             <h3>segment title</h3>
                             <p>Temporibus distinctio, vitae labore voluptate doloremque ex natus deleniti saepe ab
@@ -130,18 +135,16 @@
             <div class="section">
                 <div class="article">
                     <div class="image">
-                        <video src="./244754_small.mp4" autoplay muted loop>고</video>
+                        <video src="./images/215697_tiny.mp4" autoplay muted loop>우주</video>
                     </div>
                     <div class="texts">
                         <h3>segment title</h3>
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta accusantium? Iste est
                             fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
-                            Aspernatur, facere beatae Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                            dicta accusantium? Iste est
+                            Aspernatur, facere beatae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta accusantium? Iste est
                             fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
-                            Aspernatur, facere beatae Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                            dicta accusantium? Iste est
+                            Aspernatur, facere beatae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, dicta accusantium? Iste est
                             fugiat iure soluta quia eaque error omnis modi aperiam corporis, odit sit at expedita.
                             Aspernatur, facere beatae.</p>
                         <div class="button">button</div>
@@ -160,7 +163,7 @@
             </div>
             <div class="section">
                 <div class="article">
-                    <div class="image i6"></div>
+                    <div class="image i1"></div>
                     <div class="texts">
                         <h3>semgent title</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ipsa. Laudantium eaque cumque
@@ -169,7 +172,7 @@
                     </div>
                 </div>
                 <div class="article">
-                    <div class="image i7"></div>
+                    <div class="image i2"></div>
                     <div class="texts">
                         <h3>semgent title</h3>
                         <p>Corrupti numquam saepe aut quo iusto esse in iste vero excepturi eaque necessitatibus
@@ -178,7 +181,7 @@
                     </div>
                 </div>
                 <div class="article">
-                    <div class="image i8"></div>
+                    <div class="image i3"></div>
                     <div class="texts">
                         <h3>semgent title</h3>
                         <p>Consequatur ipsam eaque repellat enim repudiandae harum, neque commodi odit quasi
@@ -187,7 +190,7 @@
                     </div>
                 </div>
                 <div class="article">
-                    <div class="image i9"></div>
+                    <div class="image i4"></div>
                     <div class="texts">
                         <h3>semgent title</h3>
                         <p>Asperiores aliquid provident mollitia architecto, aperiam placeat quisquam doloremque
