--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="section">
                 <div class="article">
                     <div class="image">
-                        <video src="./images/215697_tiny.mp4" autoplay muted loop>우주</video>
+                        <video src="./244754_small.mp4" autoplay muted loop>고래</video>
                     </div>
                     <div class="texts">
                         <h3>segment title</h3>
@@ -179,6 +179,7 @@
                             distinctio ipsum, beatae cum nulla! Saepe impedit adipisci delectus deserunt omnis tempore
                             sequi dolorem quibusdam dolore iusto?</p>
                     </div>
+                   
                 </div>
                 <div class="article">
                     <div class="image i3"></div>
